# ShoveRand

./: .gitignore  CMakeLists.txt  README.md  boost.cmake
example/dummy_generator/: dummy_generator.hxx  dummy_generator_original.cxx  dummy_generator_original.hxx
example/montecarlo/: montecarlo_pi.cu  montecarlo_pi_original.cu
playground/: GlobalSynchronization_cannot_work.h  KernelId.cu
shoverand/core/: ParameterizedStatus.hxx  RNG.hxx  RNGAlgorithm.hxx  SeedStatus.hxx
shoverand/distribution/: pass_through_engine.hpp  uniform_01.hpp  variate_generator.hpp
shoverand/prng/mrg32k3a/: MRG32K3a_ParameterizedStatus.hxx  Makefile  RngStream.cpp  Stream.cu  Stream.h  SubStream.h  a.out  test-mrg32k3a  testMyRngStream.cpp  test_mrg32k3a_cuda.cu  utils.h
shoverand/prng/mrg32k3a/libor/: Makefile  Makefile.old  Summary 2.doc  libor.cu  libor_gold.cpp  libor_kernels.cu  mrg32k3a_cuda.h  mrg32k3a_gold.cpp
shoverand/prng/mtgp/: Makefile  main.cu.cpp  mtgp32-cuda-cuterandAPI.cu  mtgp32-cuda-cuterandAPI.cu.cpp  shoveRand_minimem.h
src/core/: RNG.hxx  RNGAlgorithm.hxx
src/distribution/: pass_through_engine.hpp  ptr_helper.hpp  uniform_01.hpp  uniform_int_float.hpp  variate_generator.hpp
src/prng/mrg32k3a/: .test_mrg32k3a_cuda.cu.swp  MRG32k3a.hxx  Makefile  MyRngStream.cpp  MyRngStream.h  ParameterizedStatus.cu  ParameterizedStatus.h  ParameterizedStatus.h~  SeedStatus.h  Stream.cu  Stream.cu~  Stream.h  SubStream.cu  SubStream.h  SubStream.h~  mrg32k3a.kdev4  oldParameterizedStatus.h  test-mrg32k3a  testMyRngStream.cpp  test_cpu  test_mrg32k3a_cuda.cu  test_mrg32k3a_cuda.cu~  utils.h  utils.h~
src/prng/mrg32k3a/.kdev4/: mrg32k3a.kdev4
src/prng/mrg32k3a/libor/: libor.cu.old  libor_as.c  params.h  report.tex
src/prng/mtgp/: MTGP.hxx  main.cu  mtgp-cuda-common.cu  mtgp-cuda-common.h  mtgp32-cuda-cuterandAPI.cu  mtgp32-cuda-cuterandAPI.h  mtgp32-cuda-hostCalled.h  mtgp32-cuda-minmem.cu  sample32-cuda-tex  test-shoverand  to-move-into-class.h
src/prng/tinymt/: Makefile  ParameterizedStatus.cu  ParameterizedStatus.h  SeedStatus.h  TinyMT.hxx  utils.cxx  utils.hxx
src/util/: myCutil.h
src/util/mrg32k3a/: util.h
src/util/tinymt/: util.cxx  util.hxx  utils.cxx  utils.hxx
test/: Makefile  Makefile_mrg32k3a  Makefile_shoverand  Makefile_variate  RngStream.h  a.out  cpu.out  gpu.out  main.cu  test-cpu  test-mrg32k3a  test-shoverand  test-shoverand.cu  testMyRngStream.cpp  testRngStream.cpp  testRngStream2.cpp  test_MRG32k3a.cu  test_mrg32k3a_cuda.cu  test_multiple_initializations.cu  test_variate.cu
